--- a/Snake Game/index.html
+++ b/Snake Game/index.html
@@ -33,6 +33,18 @@
 
             </div>
         </section>
+
+        <div class="modal">
+            <div class="start-game">
+                <h3>Welcome to the Snake game</h3>
+                <button class="btn btn-start">Start Game</button>
+            </div>
+
+            <div class="game-over">
+                <h3>Game Over</h3>
+                <button class="btn btn-restart">Restart Game</button>
+            </div>
+        </div>
     </main>
     <script src="script.js"></script>
 </body>
